# project_timer

./: README.md  main.py  projects.json  pyproject.toml
data/: projects.json  sessions.json
modules/: base.py
