[project]
name = "project-timer"
version = "0.1.0"
description = "A CLI tool to monitor time spent on various projects and tasks."
authors = [
    {name = "Andreas Tsouris",email = "andtsouris@andtsouris.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "click (>=8.1.0)",
    "yaspin (>=3)",
    "tabulate (>=0.9.0)",
    "inquirer (>=3.2.0)",
    "emoji (>=2.10)",
    "rich (>=13.9.4,<14.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
